# busy_beaver_blaze

./: .gitignore  AGENTS.md  Cargo.toml  PYTHON_BINDINGS_SUMMARY.md  README.md  index.html  pyproject.toml  quick_demo.py  rust-toolchain.toml  styles.css  test_bindings.py  test_integration.py  useful.md  worker.js
.cargo/: config.toml
.github/: copilot-instructions.md
benches/: benchmark.rs
busy_beaver_blaze/: __init__.py  __init__.pyi  _busy_beaver_blaze.pyd  frames.py  interactive.py
docs/: index.html  styles.css
docs/pkg/: README.md  busy_beaver.d.ts  busy_beaver.js  busy_beaver_bg.wasm  busy_beaver_bg.wasm.d.ts  busy_beaver_blaze_bg.wasm  busy_beaver_blaze_bg.wasm.d.ts  package.json
docs/v0.2.0/pkg/: busy_beaver_blaze_bg.wasm
docs/v0.2.2/: index.html  worker.js
docs/v0.2.2/pkg/: busy_beaver_blaze.d.ts  busy_beaver_blaze.js  busy_beaver_blaze_bg.wasm  busy_beaver_blaze_bg.wasm.d.ts  package.json
docs/v0.2.3/: index.html  worker.js
docs/v0.2.3/pkg/: busy_beaver_blaze.d.ts  busy_beaver_blaze.js  busy_beaver_blaze_bg.wasm  busy_beaver_blaze_bg.wasm.d.ts  package.json
docs/v0.2.4/: index.html  worker.js
docs/v0.2.4/pkg/: README.md  busy_beaver_blaze.d.ts  busy_beaver_blaze.js  busy_beaver_blaze_bg.wasm  busy_beaver_blaze_bg.wasm.d.ts  package.json
docs/v0.2.5/: index.html  worker.js
docs/v0.2.5/pkg/: busy_beaver_blaze.d.ts  busy_beaver_blaze_bg.wasm
docs/v0.2.6/: index.html  worker.js
docs/v0.2.6/pkg/: busy_beaver_blaze.d.ts  busy_beaver_blaze_bg.wasm  busy_beaver_blaze_bg.wasm.d.ts
docs/v1/: index.html
docs/v1/pkg/: README.md  busy_beaver.d.ts  busy_beaver.js  busy_beaver_blaze.js
example_python/: interactive_demo.py  movie.py  movie_list.py  quick_demo.py
examples/: bb5_benchmark.rs  bb5_champ_fast.rs  blur.rs  compile_machine.rs  compile_machine.rsdelme2  frame.rs  log_step.rs  movie.rs  movie_list.py  movie_list.rs  old_tetration.rs  tetration.ipynb  tetration.rs
examples/common/: mod.rs
notebooks/: conftest.py  interactive.ipynb  interactive_visualization.ipynb  rule_set_1_and_2.ipynb  tetration.ipynb  turing_machines.ipynb
src/: bool_u8.rs  code_notes.md  compiled_macros.rs  compiled_runner.rs  lib.rs  log_step_iterator.rs  machine.rs  main.rs  message0.rs  pixel.rs  pixel_policy.rs  png_data_iterator.rs  png_data_layers.rs  power_of_two.rs  python_bindings.rs  snapshot.rs  space_by_time.rs  space_by_time_machine.rs  space_time_layers.rs  spaceline.rs  spaceline_binning.rs  spacelines.rs  symbol.rs  symbol_u8.rs  tape.rs  tests.rs
tests/: integration_tests.rs
tests/python/: test_doctests.py  test_interactive.py  test_png_iterator.py  test_ruff.py  test_rust_runner.py  test_turing_machine.py
