[package]
name = "busy_beaver_blaze"
version = "0.2.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ab_glyph = "0.2.29"
derive_more = { version = "2.0.1", default-features = false, features = [
    "debug",
    "display",
    "error",
    "from",
] }
itertools = "0.14.0"
png = "0.17.16"
thousands = "0.2.0"
wasm-bindgen = "0.2.100"
# rayon = { version = "1.10.0", optional = true }

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# rayon = "1.10.0"


[dev-dependencies]
wasm-bindgen-test = "0.3.50"
image = "0.25.5"
imageproc = "0.25.0"
num-bigint = "0.4.6"
num-traits = "0.2.14"
glob = "0.3.2"

# cmk00 remember to remove this
[profile.release]
opt-level = 3

[build]
rustflags = ["-C", "target-cpu=native"]
