[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "busy_beaver_blaze._busy_beaver_blaze"
features = ["python"]

[project]
name = "busy-beaver-blaze"
version = "0.2.8"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["jupyter>=1.1.1", "gmpy2>=2.2.1", "pillow>=10.0.0", "matplotlib>=3.5.0"]
license = { text = "MIT OR Apache-2.0" }

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "maturin>=1.0,<2.0", "ipykernel", "nbmake>=1.5.0"]

[dependency-groups]
dev = [
    "nbmake>=1.5.5",
    "ruff>=0.8.0",
]


[tool.pytest.ini_options]
testpaths = ["tests/python", "notebooks"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Notebook testing: runs automatically with pytest
# Cells tagged with 'skip-execution' are skipped (see notebooks/conftest.py)
addopts = "--nbmake --nbmake-timeout=10 --ignore=notebooks/rule_set_1_and_2.ipynb"
markers = [
    "notebooks: marks tests as notebook tests (deselect with '-m \"not notebooks\"')",
]
